Fix spacing

--- a/src/app/quiz/input-quiz/input-quiz.component.sass
+++ b/src/app/quiz/input-quiz/input-quiz.component.sass
@@ -2,6 +2,10 @@
   margin-top: .5em
   margin-bottom: 3em
 
+@media (max-height: 400px)
+  .actions
+    margin-bottom: 1em
+
 @media (min-width: 800px)
   .answer-form-field
     transform: translateX(6px)
@@ -15,6 +19,11 @@
 
   ::ng-deep p
     margin-top: 2em
+
+@media (max-height: 400px)
+  .result
+    ::ng-deep p
+      margin-top: 1em
 
 .correct
   color: green
